--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "firebase": "^9.21.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
